# agentsupply-mcp

./: .gitignore  INTEGRATION.md  LLMS.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: claude_desktop.json
src/agentsupply_mcp/: server.py
